# rtuartscreader

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  README_RUS.md  clang-format.py
PCSC/: .gitattributes  CMakeLists.txt
TransportAPI/: CMakeLists.txt
TransportAPI/include/TransportAPI/: TransportAPI.h  types.h
TransportAPI/src/api/: CMakeLists.txt  TransportAPI.c  com.c  com.h  crc.c  crc.h  transport.c  transport.h  utils.c  utils.h
TransportAPI/src/tests/: CMakeLists.txt  ConsoleColor.cpp  ConsoleColor.h  TransportApiTest.cpp  TransportApiTest.h  main.cpp
log/: CMakeLists.txt  log.c
log/include/log/: log.h
log/include/log/detail/: log.h
pigpio/: .gitattributes  CMakeLists.txt  command.c  pigpio.c  pigpio.h
pigpio/include/pigpio/: pigpio.h
rtuart/: CMakeLists.txt  ifdhandler.c  librtuart  librtuart.in  log.c  log.h  reader.c  reader.h  reader_detail.h  reader_list.c  reader_list.h
rtuartscreader/: CMakeLists.txt  apdu_t0.c  apdu_t0.h  atr.c  hardware.c  ifdhandler.c  librtuartscreader.in  log.c  reader.c  reader_detail.h  reader_list.c  transport.c  transport.h
rtuartscreader/hardware/configuration/dummy/: hardware.c
rtuartscreader/hardware/configuration/pigpio/: hardware.c
rtuartscreader/hardware/platform/armv7hf/: hardware.c
rtuartscreader/hardware/platform/test/: hardware.c
rtuartscreader/include/rtuartscreader/: apdu_t0.h  atr.h  hardware.h  ifdhandler_log.h  log.h  reader.h  reader_detail.h  reader_list.h
rtuartscreader/include/rtuartscreader/hardware/: hardware.h
rtuartscreader/include/rtuartscreader/hardware/detail/: hardware_functions.h
rtuartscreader/include/rtuartscreader/iso7816_3/: apdu_t0.h  atr.h  f_d_index.h  pps.h  status.h  utils.h
rtuartscreader/include/rtuartscreader/iso7816_3/detail/: error.h  utils.h
rtuartscreader/include/rtuartscreader/log/: init.h  log.h
rtuartscreader/include/rtuartscreader/pimpl/: header.h  source.h
rtuartscreader/include/rtuartscreader/transport/: initialize.h  reset.h  sendrecv.h  status.h  transport.h  transport_status_t.h  transport_t.h
rtuartscreader/include/rtuartscreader/transport/detail/: error.h  sendrecv_functions.h  transmit_params.h  transport_initialize_functions.h
rtuartscreader/include/rtuartscreader/utils/: buffer_view.h  common.h  error.h
rtuartscreader/iso7816_3/: apdu_t0.c  atr.c  f_d_index.c  pps.c  status.c  utils.c
rtuartscreader/log/: init.c
rtuartscreader/transport/: initialize.c  reset.c  sendrecv.c  status.c  transmit_params.c
rtuartscreader/utils/: buffer_view.c  buffer_view.h
scripts/: update-license.py
scripts/data/: license_header.h.in
tests/auto/rtuartscreader/: CMakeLists.txt  apdu_t0.cpp  atr.cpp  constants.cpp  constants.h  main.cpp  pps.cpp  reset.cpp  utils.cpp  utils.h
tests/auto/rtuartscreader/fakehardware/: fakehardware.cpp
tests/auto/rtuartscreader/faketransport/: card.cpp  faketransport.cpp  initialize.cpp  sendrecv.cpp  sendrecv.h  simplecard.cpp
tests/auto/rtuartscreader/include/fakehardware/: fakehardware.h
tests/auto/rtuartscreader/include/faketransport/: card.h  faketransport.h  initialize.h  simplecard.h
